--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>js lesson6</title>
+  <title>js darslari</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico.png">
 </head>
 <body>
-<h1>hello world</h1>
 
 <p id="demo" class="demo"></p>
 <p id="kurs" class="kurs"></p>
